SimpleComplex/Locale 1.x, 2017-07-01
------------------------------------
- CLI interface for locale text.
- Export locale text from sources, as JSON to file.

SimpleComplex/Locale 1.x, 2017-06-30
------------------------------------
- Configuration, texts, locale/language mapper, abstract and a few concrete
  locale classes.

SimpleComplex/Locale 1.x, 2017-06-29
------------------------------------
- Initial.