@@ -1,38 +1,0 @@
-; HELP
-; ------------------------------------------------------------------------------
-; Character set, newline and editors:
-; - character set: UTF-8
-; - newline: \n, carriage return \r is illegal
-; - editors: don't use ™MS ™Windows ™Notepad, use ™Notepad++
-; Sections:
-; - configuration must start with a [section]
-; - a section is not allowed to be empty; have no children
-; Names:
-; - must consist of letters (lower, upper), digits, hyphen and underscore
-; Quotes:
-; - only required then leading or trailing space
-; - use double quotes, not single
-; Values are single-lined:
-; - use \n (single backslash) to indicate newline
-; Values become typed (to other than string):
-; - null/NULL: null
-; - true/false: boolean
-; - 8: int
-; - 0.8: float
-; Comments:
-; - line comment begins with semicolon
-; - inline comment is not supported
-; Example:
-; [some_section]
-; someFlatVar = some string
-; someIndexedList[] = first
-; someIndexedList[] = second
-; someKeyedList[first] = primary
-; someKeyedList[second] = secondary
-; ------------------------------------------------------------------------------
-[lib_simplecomplex_locale]
-; Paths relative to document root, where LocaleText should look for text files.
-; The files must use the file extension .locale-text.[language code].ini;
-; example someSolution.locale-text.en-us.ini.
-localeTextPaths[] = vendor/simplecomplex/locale/config-text-ini
-;localeTextPaths[] = solutions
