@@ -1,4 +1,4 @@
-; HELP
+; CONFIGURATION FILE HELP
 ; ------------------------------------------------------------------------------
 ; Character set, newline and editors:
 ; - character set: UTF-8
@@ -6,25 +6,25 @@
 ; - editors: don't use ™MS ™Windows ™Notepad, use ™Notepad++
 ; Sections:
 ; - configuration must start with a [section]
-; - a section is not allowed to be empty; have no children
-; Names:
+; Names (section, key):
 ; - must consist of letters (lower, upper), digits, hyphen and underscore
+; Illegal special keys:
+; - null, yes, no, true, false, on, off, none
 ; Quotes:
-; - only required then leading or trailing space
-; - use double quotes, not single
+; - double quotes; only required then leading or trailing space
 ; Values are single-lined:
 ; - use \n (single backslash) to indicate newline
-; Values become typed (to other than string):
-; - null/NULL: null
-; - true/false: boolean
-; - 8: int
-; - 0.8: float
+; Values become string, except:
+; - null|true|false: null, boolean
+; - 8|0.8: integer, float
+; Empty string value:
+; - key =
+; - key = ""
 ; Comments:
-; - line comment begins with semicolon
-; - inline comment is not supported
+; - line comment begins with semicolon; inline comment not supported
 ; Example:
 ; [some_section]
-; someFlatVar = some string
+; some-flat-var = some string
 ; someIndexedList[] = first
 ; someIndexedList[] = second
 ; someKeyedList[first] = primary
@@ -52,3 +52,8 @@ localeToLanguage[da-dk] = da-dk
 languageToLocale[en-us] = en-us
 languageToLocale[en-gb] = en-gb
 languageToLocale[da-dk] = da-dk
+; Paths relative to document root, where LocaleText should look for text files.
+; The files must use the file extension .locale-text.[language code].ini;
+; example someSolution.locale-text.en-us.ini.
+localeTextPaths[] = vendor/simplecomplex/locale/locale-text-ini
+;localeTextPaths[] = solutions
