@@ -1,34 +1,32 @@
-; HELP
+; LOCALE TEXT HELP
 ; ------------------------------------------------------------------------------
 ; Character set, newline and editors:
 ; - character set: UTF-8
 ; - newline: \n, carriage return \r is illegal
 ; - editors: don't use ™MS ™Windows ™Notepad, use ™Notepad++
 ; Sections:
-; - configuration must start with a [section]
-; - a section is not allowed to be empty; have no children
-; Names:
+; - locale texts must start with a [section]
+; Names (section, key):
 ; - must consist of letters (lower, upper), digits, hyphen and underscore
+; Special keys are legal in locale-text .ini:
+; - null, yes, no, true, false, on, off, none
 ; Quotes:
-; - only required then leading or trailing space
-; - use double quotes, not single
+; - double quotes; only required then leading or trailing space
 ; Values are single-lined:
 ; - use \n (single backslash) to indicate newline
-; Values become typed (to other than string):
-; - null/NULL: null
-; - true/false: boolean
-; - 8: int
-; - 0.8: float
+; - locale text values are always string
+; Empty value:
+; - key =
+; - key = ""
 ; Comments:
-; - line comment begins with semicolon
-; - inline comment is not supported
+; - line comment begins with semicolon; inline comment not supported
 ; Example:
 ; [some_section]
-; someFlatVar = some string
-; someIndexedList[] = first
-; someIndexedList[] = second
-; someKeyedList[first] = primary
-; someKeyedList[second] = secondary
+; some-text = some text
+; someIndexedTextList[] = first
+; someIndexedTextList[] = second
+; someKeyedTextList[first] = primary
+; someKeyedTextList[second] = secondary
 ; ------------------------------------------------------------------------------
 [generic]
 yes = yes
